Firmware uploaded was added.